manifests/zeppelin/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeppelin
  labels:
    app.kubernetes.io/name: zeppelin
