manifests/zeppelin/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zeppelin-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: zeppelin-electinfo-tls
  routes:
    - kind: Rule
      match: Host(`zeppelin.elect.info`)
      middlewares:
        - name: universal-basicauth
          namespace: traefik
      services:
        - kind: Service
          name: zeppelin-server
          namespace: zeppelin
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zeppelin-http-redirect
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`zeppelin.elect.info`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - kind: Service
          name: zeppelin-server
          namespace: zeppelin
          port: 80
